# KitchenRecipeSearchAgent

./: README.md  agent.py  agent_api.py  agent_logger.py  asgi.py  curl_test.py  debug_storage.py  demo.html  demo_frontend.py  demo_user_context.py  final_test.py  main.py  models.py  openai_handler.py  prompt_enricher.py  pyproject.toml  quick_test.py  recipe_bulk_storage.py  recipe_crawler.py  recipe_filters.py  recipe_parser.py  recipe_scraper.py  recipe_scraper_fixed.py  recipe_storage.py  replit.md  requirements.txt  run_fastapi.py  run_fastapi_server.py  run_server.py  server.py  start_fastapi.py  supabase_filters.py  supabase_sources.py  test_agent.py  test_api.py  test_complete_agent_logging.py  test_complete_personalized_agent.py  test_complete_recipe_sources.py  test_complete_workflow.py  test_context_functionality.py  (+16 more)
attached_assets/: Pasted--Kitchnsync-io-Agent-Context-Rules-Purpose-This-agent-is-part-of-Kitchnsync-io-an-A-1749491769716_1749491769717.txt  Pasted--Kitchnsync-io-Agent-Product-Requirements-Document-PRD-Objective-Build-an-AI-powered--1749491750691_1749491750693.txt  Pasted-You-re-building-an-AI-powered-backend-agent-for-Kitchnsync-io-a-meal-planning-and-recipe-discovery-1749501914039_1749501914040.txt
