[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "email-validator>=2.2.0",
    "extruct>=0.18.0",
    "fastapi>=0.115.12",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn[gthread]>=23.0.0",
    "openai>=1.85.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "requests>=2.32.4",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.34.3",
]
